--- a/AFE2016/src/main/webapp/WEB-INF/web.xml
+++ b/AFE2016/src/main/webapp/WEB-INF/web.xml
@@ -3,84 +3,13 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 <web-app>
 	<display-name>Archetype Created Web Application</display-name>
-
-
-	<!-- SPNEGA filter -->
 	<filter>
-		<filter-name>SpnegoHttpFilter</filter-name>
-		<filter-class>net.sourceforge.spnego.SpnegoHttpFilter</filter-class>
-
-		<init-param>
-			<param-name>spnego.allow.basic</param-name>
-			<param-value>true</param-value>
-		</init-param>
-
-		<init-param>
-			<param-name>spnego.allow.localhost</param-name>
-			<param-value>true</param-value>
-		</init-param>
-
-		<init-param>
-			<param-name>spnego.allow.unsecure.basic</param-name>
-			<param-value>true</param-value>
-		</init-param>
-
-		<init-param>
-			<param-name>spnego.login.client.module</param-name>
-			<param-value>spnego-client</param-value>
-		</init-param>
-
-		<init-param>
-			<param-name>spnego.krb5.conf</param-name>
-			<param-value>krb5.conf</param-value>
-		</init-param>
-
-		<init-param>
-			<param-name>spnego.login.conf</param-name>
-			<param-value>login.conf</param-value>
-		</init-param>
-
-		<init-param>
-			<param-name>spnego.preauth.username</param-name>
-			<param-value>encore</param-value>
-		</init-param>
-
-		<init-param>
-			<param-name>spnego.preauth.password</param-name>
-			<param-value>Renew@2020</param-value>
-		</init-param>
-
-		<init-param>
-			<param-name>spnego.login.server.module</param-name>
-			<param-value>spnego-server</param-value>
-		</init-param>
-
-		<init-param>
-			<param-name>spnego.prompt.ntlm</param-name>
-			<param-value>true</param-value>
-		</init-param>
-
-		<init-param>
-			<param-name>spnego.logger.level</param-name>
-			<param-value>1</param-value>
-		</init-param>
+		<filter-name>LoginUser</filter-name>
+		<!-- filter-class>org.apache.catalina.filters.CorsFilter</filter-class-->
+		<filter-class>com.infosys.submission.filter.LoginUser</filter-class>
 	</filter>
-
-	<filter>
-		<filter-name>UserAuthFilter</filter-name>
-		<filter-class>com.infosys.submission.filter.LoginFilter</filter-class>
-		<init-param>
-			<param-name>avoid-urls</param-name>
-			<param-value>/public</param-value>
-		</init-param>
-	</filter>
-	
 	<filter-mapping>
-		<filter-name>SpnegoHttpFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>UserAuthFilter</filter-name>
+		<filter-name>LoginUser</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	<servlet>
@@ -99,10 +28,8 @@
 	</servlet>
 	<servlet>
 		<servlet-name>i</servlet-name>
-		<servlet-class>com.infosys.submission.servlet.LoginServlet</servlet-class>
+		<servlet-class>org.simplity.http.DefaultLogin</servlet-class>
 	</servlet>
-	<!-- servlet> <servlet-name>i</servlet-name> <servlet-class>org.simplity.http.DefaultLogin</servlet-class> 
-		</servlet -->
 	<servlet>
 		<servlet-name>o</servlet-name>
 		<servlet-class>org.simplity.http.DefaultLogout</servlet-class>
