--- a/petclinic/pom.xml
+++ b/petclinic/pom.xml
@@ -17,7 +17,7 @@
 		<dependency>
 			<groupId>org.simplity</groupId>
 			<artifactId>kernel</artifactId>
-			<version>1.1.3</version>
+			<version>1.1.4</version>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
@@ -36,6 +36,18 @@
 			<version>1.1.4</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.7</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.7</version>
+		</dependency>		
+	
+	
 	</dependencies>
 	<build>
 		<finalName>petstore</finalName>
@@ -62,7 +74,7 @@
 							<srcFiles>
 								<srcFile>${resourcespath}/dbscripts/h2/schema.sql</srcFile>
 								<srcFile>${resourcespath}/dbscripts/h2/data.sql</srcFile>
-								<srcFile>${resourcespath}/dbscripts/h2/views.sql</srcFile>								
+								<srcFile>${resourcespath}/dbscripts/h2/views.sql</srcFile>
 							</srcFiles>
 						</configuration>
 					</execution>
