--- a/simplity/kernel/pom.xml
+++ b/simplity/kernel/pom.xml
@@ -80,6 +80,11 @@
 
 	</dependencies>
 	<build>
+		<testResources>
+			<testResource>
+				<directory>${project.basedir}/src/test/resources</directory>
+			</testResource>
+		</testResources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
