--- a/simplity/pom.xml
+++ b/simplity/pom.xml
@@ -6,6 +6,18 @@
   <version>1.2</version>
   <packaging>pom</packaging>
   <name>simplity</name>
+  <scm>
+  	<developerConnection>scm:git:https://github.com/simplity/simplity/tree/master/simplity</developerConnection>
+  </scm>
+  <build>
+  	<plugins>
+  		<plugin>
+  			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-release-plugin</artifactId>
+  			<version>2.5.3</version>
+  		</plugin>
+  	</plugins>
+  </build>
   <modules>
     <module>kernel</module>
     <module>js</module>
