--- a/examples/helloworld/pom.xml
+++ b/examples/helloworld/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.simplity.examples</groupId>
 		<artifactId>examples</artifactId>
-		<version>1.2</version>
+		<version>1.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>helloworld</artifactId>
 	<packaging>war</packaging>
@@ -31,7 +31,7 @@
 		<dependency>
 			<groupId>org.simplity</groupId>
 			<artifactId>kernel</artifactId>
-			<version>1.2</version>
+			<version>1.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.simplity.utils</groupId>
@@ -43,9 +43,6 @@
 	<build>
 		<finalName>helloworld</finalName>
 		<testResources>
-			<testResource>
-				<directory>${project.basedir}/src/test/resources</directory>
-			</testResource>
 			<testResource>
 				<directory>${project.basedir}/src/main/resources</directory>
 			</testResource>
