--- a/examples/mcHelloWorld/pom.xml
+++ b/examples/mcHelloWorld/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.simplity.examples</groupId>
 		<artifactId>examples</artifactId>
-		<version>1.2</version>
+		<version>1.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>mcHelloWorld</artifactId>
 	<name>mcHelloWorld</name>
@@ -47,4 +47,5 @@
 			<version>2.7</version>
 		</dependency>
 	</dependencies>
+	
 </project>
