--- a/examples/petclinic/pom.xml
+++ b/examples/petclinic/pom.xml
@@ -6,15 +6,21 @@
 	<parent>
 		<groupId>org.simplity.examples</groupId>
 		<artifactId>examples</artifactId>
-		<version>1.2</version>
-	</parent>	
+		<version>1.2-SNAPSHOT</version>
+	</parent>
 	<artifactId>petclinic</artifactId>
 	<packaging>war</packaging>
 	<name>petstore Maven Webapp</name>
 	<url>http://maven.apache.org</url>
+
 	<properties>
 		<resourcespath>${project.build.directory}/classes</resourcespath>
 		<dbpath>D:/temp/petclinic</dbpath>
+		<torque.driver>org.h2.Driver</torque.driver>
+		<torque.database.url>jdbc:h2:file:${dbpath}</torque.database.url>
+		<torque.database.user>sa</torque.database.user>
+		<torque.database.password></torque.database.password>
+		<torque.database.schema></torque.database.schema>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -40,6 +46,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.simplity.utils</groupId>
+			<artifactId>template</artifactId>
+			<version>1.2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
 			<version>2.7</version>
@@ -48,10 +60,15 @@
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
 			<version>2.7</version>
-		</dependency>		
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>petstore</finalName>
+		<testResources>
+			<testResource>
+				<directory>src\main\webapp\WEB-INF</directory>
+			</testResource>
+		</testResources>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -80,6 +97,45 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.torque</groupId>
+				<artifactId>torque-maven-plugin	</artifactId>
+				<version>4.0</version>
+				<executions>
+					<execution>
+						<id>generate-schema-from-jdbc</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+						<configuration>
+							<packaging>classpath</packaging>
+							<configPackage>org.simplity.utils.torque</configPackage>
+							<newFileTargetDir>target/generated-schema</newFileTargetDir>
+							<newFileTargetDirUsage>none</newFileTargetDirUsage>
+							<options>
+								<torque.jdbc2schema.driver>${torque.driver}</torque.jdbc2schema.driver>
+								<torque.jdbc2schema.url>${torque.database.url}</torque.jdbc2schema.url>
+								<torque.jdbc2schema.user>${torque.database.user}</torque.jdbc2schema.user>
+								<torque.jdbc2schema.password>${torque.database.password}</torque.jdbc2schema.password>
+								<torque.jdbc2schema.schema>${torque.database.schema}</torque.jdbc2schema.schema>
+							</options>
+						</configuration>
+					</execution>
+				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>com.h2database</groupId>
+						<artifactId>h2</artifactId>
+						<version>1.3.166</version>
+					</dependency>
+					<dependency>
+						<groupId>org.simplity.utils</groupId>
+						<artifactId>template</artifactId>
+						<version>1.2</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 		<pluginManagement>
