--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -1,17 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.simplity.examples</groupId>
-  <artifactId>examples</artifactId>
-  <version>1.2</version>
-  <packaging>pom</packaging>
-  <name>examples</name>
-  <modules>
-    <module>helloworld</module>
-    <module>mcHelloWorld</module>
-    <module>petclinic</module>
-    <module>simplitytest</module>
-	<module>wbBatch</module>
-    <module>wbFileAgent</module>
-  </modules>
+<project
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.simplity.examples</groupId>
+	<artifactId>examples</artifactId>
+	<version>1.2-SNAPSHOT</version>
+	<packaging>pom</packaging>
+	<name>examples</name>
+	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
+	<modules>
+		<module>helloworld</module>
+		<module>mcHelloWorld</module>
+		<module>wbBatch</module>
+		<module>wbFileAgent</module>
+		<module>petclinic</module>
+	</modules>
 </project>
