--- a/examples/wbBatch/pom.xml
+++ b/examples/wbBatch/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.simplity.examples</groupId>
 		<artifactId>examples</artifactId>
-		<version>1.2</version>
+		<version>1.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>wbBatch</artifactId>
 	<packaging>war</packaging>
