--- a/examples/wbFileAgent/pom.xml
+++ b/examples/wbFileAgent/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.simplity.examples</groupId>
     <artifactId>examples</artifactId>
-    <version>1.2</version>
+    <version>1.2-SNAPSHOT</version>
   </parent>
   <artifactId>wbFileAgent</artifactId>
   <packaging>war</packaging>
