--- a/simplity/js/pom.xml
+++ b/simplity/js/pom.xml
@@ -12,7 +12,7 @@
 	<parent>
 		<artifactId>simplity</artifactId>
 		<groupId>org.simplity</groupId>
-		<version>1.2</version>
+		<version>1.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>js</artifactId>
 	<name>js</name>
