--- a/simplity/kernel/pom.xml
+++ b/simplity/kernel/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.simplity</groupId>
 		<artifactId>simplity</artifactId>
-		<version>1.2</version>
+		<version>1.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>kernel</artifactId>
 	<packaging>jar</packaging>
