--- a/utils/archetype-partial/pom.xml
+++ b/utils/archetype-partial/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.simplity.utils</groupId>
 		<artifactId>utils</artifactId>
-		<version>1.2</version>
+		<version>1.2-SNAPSHOT</version>
 	</parent>	
 	<artifactId>archetype-partial</artifactId>
 	<name>Simplity Archetype</name>
