--- a/utils/test/pom.xml
+++ b/utils/test/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.simplity.utils</groupId>
 		<artifactId>utils</artifactId>
-		<version>1.2</version>
+		<version>1.2-SNAPSHOT</version>
 	</parent>	  
   <artifactId>test</artifactId>
   <dependencies>
@@ -16,7 +16,7 @@
   	<dependency>
 		<groupId>org.simplity</groupId>
 		<artifactId>kernel</artifactId>
-		<version>1.2</version>
+		<version>1.2-SNAPSHOT</version>
 		<scope>compile</scope>
   	</dependency>
   </dependencies>
