--- a/examples/helloworld/pom.xml
+++ b/examples/helloworld/pom.xml
@@ -36,7 +36,7 @@
 		<dependency>
 			<groupId>org.simplity.utils</groupId>
 			<artifactId>test</artifactId>
-			<version>1.2</version>
+			<version>1.2-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
