--- a/examples/mcHelloWorld/pom.xml
+++ b/examples/mcHelloWorld/pom.xml
@@ -34,7 +34,7 @@
 		<dependency>
 			<groupId>org.simplity</groupId>
 			<artifactId>kernel</artifactId>
-			<version>1.2</version>
+			<version>1.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
