--- a/examples/petclinic/pom.xml
+++ b/examples/petclinic/pom.xml
@@ -26,7 +26,7 @@
 		<dependency>
 			<groupId>org.simplity</groupId>
 			<artifactId>kernel</artifactId>
-			<version>1.2</version>
+			<version>1.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
@@ -42,13 +42,13 @@
 		<dependency>
 			<groupId>org.simplity.utils</groupId>
 			<artifactId>test</artifactId>
-			<version>1.2</version>
+			<version>1.2-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.simplity.utils</groupId>
 			<artifactId>template</artifactId>
-			<version>1.2</version>
+			<version>1.2-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
