--- a/examples/wbFileAgent/pom.xml
+++ b/examples/wbFileAgent/pom.xml
@@ -31,7 +31,7 @@
 		<dependency>
 			<groupId>org.simplity</groupId>
 			<artifactId>kernel</artifactId>
-			<version>1.2</version>
+			<version>1.2-SNAPSHOT</version>
 		</dependency>    
   </dependencies>
   <build>
