--- a/examples/helloworld/pom.xml
+++ b/examples/helloworld/pom.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+>
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.simplity.examples</groupId>
@@ -11,6 +14,9 @@
 	<packaging>war</packaging>
 	<name>helloworld Maven Webapp</name>
 	<url>http://maven.apache.org</url>
+	<properties>
+			<dbpath>D:/temp/hw</dbpath>	
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -39,6 +45,11 @@
 			<version>1.2-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.3.166</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>helloworld</finalName>
@@ -47,5 +58,51 @@
 				<directory>${project.basedir}/src/main/resources</directory>
 			</testResource>
 		</testResources>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>sql-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>create-db</id>
+						<phase>install</phase>
+						<goals>
+							<goal>execute</goal>
+						</goals>
+						<configuration>
+							<srcFiles>
+								<srcFile>${resourcespath}/dbscripts/h2/schema.sql</srcFile>
+								<srcFile>${resourcespath}/dbscripts/h2/data.sql</srcFile>
+								<srcFile>${resourcespath}/dbscripts/h2/views.sql</srcFile>
+							</srcFiles>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>sql-maven-plugin</artifactId>
+					<version>1.5</version>
+					<dependencies>
+						<dependency>
+							<groupId>com.h2database</groupId>
+							<artifactId>h2</artifactId>
+							<version>1.3.166</version>
+						</dependency>
+					</dependencies>
+					<configuration>
+						<driver>org.h2.Driver</driver>
+						<url>jdbc:h2:file:${dbpath}</url>
+						<username>sa</username>
+						<password></password>
+						<autocommit>true</autocommit>
+						<skip>${maven.test.skip}</skip>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 </project>
