--- a/examples/helloworld/pom.xml
+++ b/examples/helloworld/pom.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project
-	xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.simplity.examples</groupId>
@@ -14,11 +11,6 @@
 	<packaging>war</packaging>
 	<name>helloworld Maven Webapp</name>
 	<url>http://maven.apache.org</url>
-	<properties>
-		<dbpath>D:/temp/hw</dbpath>
-		<resourcespath>src/main/resources/dbscripts/h2</resourcespath>
-		<anotherService>http://localhost:8080/helloworld/a._s?_serviceName=helloworld</anotherService>
-	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -64,6 +56,7 @@
 		<testResources>
 			<testResource>
 				<directory>${project.basedir}/src/main/resources</directory>
+				<filtering>true</filtering>
 			</testResource>
 		</testResources>
 		<plugins>
@@ -73,7 +66,7 @@
 				<executions>
 					<execution>
 						<id>create-db</id>
-						<phase>install</phase>
+						<phase>process-test-resources</phase>
 						<goals>
 							<goal>execute</goal>
 						</goals>
@@ -81,6 +74,24 @@
 							<srcFiles>
 								<srcFile>${resourcespath}/schema.sql</srcFile>
 							</srcFiles>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>properties-maven-plugin</artifactId>
+				<version>1.0-alpha-2</version>
+				<executions>
+					<execution>
+						<phase>initialize</phase>
+						<goals>
+							<goal>read-project-properties</goal>
+						</goals>
+						<configuration>
+							<files>
+								<file>${basedir}/build.properties</file>
+							</files>
 						</configuration>
 					</execution>
 				</executions>
@@ -101,7 +112,7 @@
 					</dependencies>
 					<configuration>
 						<driver>org.h2.Driver</driver>
-						<url>jdbc:h2:file:${dbpath}</url>
+						<url>jdbc:h2:file:${project.build.directory}/${dbpath}</url>
 						<username>sa</username>
 						<password></password>
 						<autocommit>true</autocommit>
