--- a/examples/helloworld/build.properties
+++ b/examples/helloworld/build.properties
@@ -1,3 +1,3 @@
-dbpath=hw123
+dbpath=hw
 resourcespath=src/main/resources/dbscripts/h2
 anotherService=http://localhost:8080/helloworld/a._s?_serviceName=helloworld
