--- a/examples/mcHelloWorld/pom.xml
+++ b/examples/mcHelloWorld/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.simplity.examples</groupId>
 		<artifactId>examples</artifactId>
-		<version>1.2</version>
+		<version>1.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>mcHelloWorld</artifactId>
 	<name>mcHelloWorld</name>
@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>org.simplity</groupId>
 			<artifactId>kernel</artifactId>
-			<version>1.2</version>
+			<version>1.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
