--- a/examples/petclinic/pom.xml
+++ b/examples/petclinic/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.simplity.examples</groupId>
 		<artifactId>examples</artifactId>
-		<version>1.2-SNAPSHOT</version>
+		<version>1.2-SNAPSHOT-SNAPSHOT</version>
 	</parent>
 	<artifactId>petclinic</artifactId>
 	<packaging>war</packaging>
@@ -26,7 +26,7 @@
 		<dependency>
 			<groupId>org.simplity</groupId>
 			<artifactId>kernel</artifactId>
-			<version>1.2-SNAPSHOT</version>
+			<version>1.2-SNAPSHOT-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
@@ -42,13 +42,13 @@
 		<dependency>
 			<groupId>org.simplity.utils</groupId>
 			<artifactId>test</artifactId>
-			<version>1.2-SNAPSHOT</version>
+			<version>1.2-SNAPSHOT-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.simplity.utils</groupId>
 			<artifactId>template</artifactId>
-			<version>1.2-SNAPSHOT</version>
+			<version>1.2-SNAPSHOT-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -133,7 +133,7 @@
 					<dependency>
 						<groupId>org.simplity.utils</groupId>
 						<artifactId>template</artifactId>
-						<version>1.2</version>
+						<version>1.2-SNAPSHOT</version>
 					</dependency>
 				</dependencies>
 			</plugin>
