--- a/examples/helloworld/build.properties
+++ b/examples/helloworld/build.properties
@@ -1,3 +1,6 @@
 dbpath=hw
 resourcespath=src/main/resources/dbscripts/h2
 anotherService=http://localhost:8080/helloworld/a._s?_serviceName=helloworld
+torque.driver=org.h2.Driver
+torque.database.url=jdbc:h2:file:${project.build.directory}/${dbpath}
+torque.database.user=sa
