--- a/examples/helloworld/pom.xml
+++ b/examples/helloworld/pom.xml
@@ -95,6 +95,46 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.torque</groupId>
+				<artifactId>torque-maven-plugin	</artifactId>
+				<version>4.0</version>
+				<executions>
+					<execution>
+						<id>generate-schema-from-jdbc</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+						<configuration>
+							<packaging>classpath</packaging>
+							<configPackage>org.simplity.utils.torque</configPackage>
+							<newFileTargetDir>target/generated-schema</newFileTargetDir>
+							<newFileTargetDirUsage>none</newFileTargetDirUsage>
+							<options>
+								<torque.jdbc2schema.driver>${torque.driver}</torque.jdbc2schema.driver>
+								<torque.jdbc2schema.url>${torque.database.url}</torque.jdbc2schema.url>
+								<torque.jdbc2schema.user>${torque.database.user}</torque.jdbc2schema.user>
+								<torque.jdbc2schema.password>${torque.database.password}</torque.jdbc2schema.password>
+								<torque.jdbc2schema.schema>${torque.database.schema}</torque.jdbc2schema.schema>
+							</options>
+						</configuration>
+					</execution>
+				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>com.h2database</groupId>
+						<artifactId>h2</artifactId>
+						<version>1.3.166</version>
+					</dependency>
+					<dependency>
+						<groupId>org.simplity.utils</groupId>
+						<artifactId>template</artifactId>
+						<version>1.2-SNAPSHOT</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+			
 		</plugins>
 		<pluginManagement>
 			<plugins>
