--- a/examples/helloworld/src/main/webapp/WEB-INF/web.xml
+++ b/examples/helloworld/src/main/webapp/WEB-INF/web.xml
@@ -14,35 +14,11 @@
 	</servlet>
 	<servlet>
 		<servlet-name>s</servlet-name>
-		<servlet-class>org.simplity.http.Serve</servlet-class>
-	</servlet>
-	<servlet>
-		<servlet-name>i</servlet-name>
-		<servlet-class>org.simplity.http.DefaultLogin</servlet-class>
-	</servlet>
-	<servlet>
-		<servlet-name>o</servlet-name>
-		<servlet-class>org.simplity.http.DefaultLogout</servlet-class>
-	</servlet>
-	<servlet>
-		<servlet-name>f</servlet-name>
-		<servlet-class>org.simplity.http.Stream</servlet-class>
+		<servlet-class>org.simplity.http.ServeURL</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>s</servlet-name>
-		<url-pattern>*._s</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>i</servlet-name>
-		<url-pattern>*._i</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>o</servlet-name>
-		<url-pattern>*._o</url-pattern>
-	</servlet-mapping>
-	<servlet-mapping>
-		<servlet-name>f</servlet-name>
-		<url-pattern>*._f</url-pattern>
+		<url-pattern>/simplity</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
