--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -16,6 +16,6 @@
 		<module>mcHelloWorld</module>
 		<module>wbBatch</module>
 		<module>wbFileAgent</module>
-		<!--module>petclinic</module -->
+		<module>petclinic</module>
 	</modules>
 </project>
