--- a/examples/petclinic/pom.xml
+++ b/examples/petclinic/pom.xml
@@ -15,9 +15,9 @@
 
 	<properties>
 		<resourcespath>${project.build.directory}/classes</resourcespath>
-		<dbpath>D:/temp/petclinic</dbpath>
+		<dbpath>petclinic</dbpath>
 		<torque.driver>org.h2.Driver</torque.driver>
-		<torque.database.url>jdbc:h2:file:${dbpath}</torque.database.url>
+		<torque.database.url>jdbc:h2:file:${project.build.directory}/${dbpath}</torque.database.url>
 		<torque.database.user>sa</torque.database.user>
 		<torque.database.password></torque.database.password>
 		<torque.database.schema></torque.database.schema>
@@ -153,7 +153,7 @@
 					</dependencies>
 					<configuration>
 						<driver>org.h2.Driver</driver>
-						<url>jdbc:h2:file:${dbpath}</url>
+						<url>jdbc:h2:file:${project.build.directory}/${dbpath}</url>
 						<username>sa</username>
 						<password></password>
 						<autocommit>true</autocommit>
